...
    case stopped
    case unknown

    var title: String {
        switch self {
        case .started:
            "Started"
        case .stopped:
            "Stopped"
        case .unknown:
            "Unknown"
        }
    }

    var systemImage: String {
...
